# XremapManager

./: .gitignore  Makefile.am  README.md  configure.ac  xremaprunner.service  xrmp-runner
res/: Makefile.am
res/config/: xremapmanager.json
res/init/openrc/: xremaprunner  xremaprunner.in
res/init/systemd/: xremaprunner.service.in
src/: .gitignore  Makefile.am  pyproject.toml  pyproject.toml.in  xrmp-runner.in
src/xremapmanager/: __init__.py  _data.py  _data.py.in  config.py  manage.py  runner.py
src/xremapmanager/XrmpMgrUi/: Devices.qml  Main.qml  qmldir
src/xremapmanager/templates/: base.html  index.html
